--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "bootstrap": "^3.3.7",
     "jquery": "^3.2.1",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "react-modal": "^2.2.2"
   },
   "devDependencies": {
     "react-scripts": "1.0.2"
