--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "firebase": "^4.1.3",
     "jquery": "^3.2.1",
+    "rc-calendar": "^8.4.6",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-modal": "^2.2.2"
