--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "rc-calendar": "^8.4.6",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-modal": "^2.2.2"
+    "react-modal": "^2.2.2",
+    "reactfire": "^1.0.0"
   },
   "devDependencies": {
     "gh-pages": "^1.0.0",
